GER: Can now secure Skagerrak and lease Trondheim

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -670,7 +670,7 @@ gerdom.209.b:0 "Ughhh... but that's expensive..."
 ### Foreign Events ###
 
 gerfor.1.t:0 "The Union of Britain invades Denmark"
-gerfor.1.d:0 "The combined forces of the Union of Britain have launched an invasion of Denmark. This invasion threatens to disrupt the balance of power in favour of the syndicalist alliance. Shall we warn the syndicalists about the foolishness of their actions or let Denmark fall?"
+gerfor.1.d:0 "The combined forces of the Union of Britain have launched an invasion of Denmark. This invasion threatens to disrupt the balance of power in favour of the syndicalist alliance, and the Danish government has asked for our help. Shall we warn the syndicalists about the foolishness of their actions or let Denmark fall?"
 gerfor.1.a:0 "Warn them to turn back or face German arms!"
 gerfor.1.b:0 "Back Down! We've changed our minds!"
 
@@ -679,9 +679,10 @@ gerfor.2.d:0 "The Second Reich has Sent an Ultimatum to London. We are to either
 gerfor.2.a:0 "We will not risk war with Germany, pack up!"
 gerfor.2.b:0 "We Answer to no Monarchy! Continue onto their capital!"
 
-gerfor.3.t:0 "The Ultimatum, Berlin Warns London"
-gerfor.3.d:0 "Germany has come to our aid! They have sent an ultimatum to the Union of Britain, either fall back to their home islands or risk annihilation."
-gerfor.3.a:0 "We knew they'd pull through for us!"
+gerfor.3.t:0 "Asking the Germans for help"
+gerfor.3.d:0 "We are in a state of war with the Union of Britain. Our military, while proud, will not be able to withstand the Syndicalist onslaught. Some influential figures of daily life are petinioning us to ask the Germans for help, even if it might mean having to accept some German influence after the invasion is repelled. What shall we do?"
+gerfor.3.a:0 "Send a telegram to Berlin!"
+gerfor.3.b:0 "The Germans can't be trusted!"
 
 gerfor.4.t:0 "The Union of Britain Backs Down"
 gerfor.4.d:0 "After the ultimatum was received by London they quickly sent orders to all of their commanders on the ground to cease fire and return to the coast. We have achieved a diplomatic victory today. We have shown the world we will stand up to Socialist and Syndicalist aggression. We will protect any nation under threat from Britain or France."
@@ -916,6 +917,19 @@ gerfor.62.t:0 "Bulgaria will give us some aid!"
 gerfor.62.d:0 "Bulgaria listened to our plea for help but decided not to join our alliance. Instead they will send supplies and volunteers to help in our struggle against Syndicalism!"
 gerfor.62.a:0 "It's better than nothing!"
 
+gerfor.63.t:0 "Germany wants Trondheim"
+gerfor.63.d:0 "The Kaiserreich has approached our ambassador with a somewhat strange offer: We have been offered a substantial sum of money if we lease them our harbour of Trondheim for 25 years, to allow for the creation of a forward base against the Syndicalist Union of Britain. The Norwegian inhabitants would be allowed to stay, as would our civilian administration, and the boost to commerce in the region would be immense; But the British might decide to retaliate against us if we agree to the offer... \n\nWhat shall we do?"
+gerfor.63.a:0 "The money is good!"
+gerfor.63.b:0 "We can't anger the British!"
+
+gerfor.64.t:0 "Norway agrees to lease Trondheim"
+gerfor.64.d:0 "The Norwegian government has decided to agree to our offer of leasing Trondheim for the next 25 years! A small commission is already on its way to assess the investments necessary to make Trondheim an integral part in our defense against Syndicalism."
+gerfor.64.a:0 "Very good."
+
+gerfor.64.t:0 "Norway does not agree to lease Trondheim"
+gerfor.64.d:0 "The Norwegian government has decided to not agree to our offer of leasing Trondheim for the next 25 years, citing the threat of British retaliation. While understandable and not unexpected, this is still unfortunate."
+gerfor.64.a:0 "Kiel will have to be good enough."
+
 ### Flavour Events ###
 
 gerdom.101.t:0 "The Great Crusade"
@@ -1037,6 +1051,8 @@ navy_1934_complete:0 "1934 Navy Program completed"
 GER_parlamentsvertrauen_tp:0 "Election results will determine governments."
 GER_disband_reichstag_tp:0 "Elections will not be held."
 GER_cult_of_aviation_tp:0 "Our pilots will bring themselves to their very limits."
+GER_DEN_neutralist_pigs:0 "Denmark has refused our aid"
+security_backdown:0 "Security Backdown"
 
 ### Opinion Modifiers ###
 sri_lanka:0 "Imperialist Bastard"
@@ -1059,6 +1075,8 @@ wll_int:0 "Snubbed us"
 give_holl:0 "The Holland Award"
 occupy_mor:0 "Occupation of Morocco"
 polish_deal_op:0 "Economic Deal"
+GER_trondheim_yes_op:0 "Leased Trondheim"
+GER_trondheim_no_op:0 "Didn't lease Trondheim"
 
 ### Companies ###
 krupp:0 "Krupp"
