Minor Polish changes

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -877,7 +877,7 @@ poland.133.b:0 "We don't need them!"
 poland.134.t:0 "Reincorporating Lithuania"
 poland.134.d:0 "to-do"
 poland.134.a:0 "They are safer under our protection."
-poland.135.t:0 "Poland Seeks Our Submission"
+poland.135.t:0 "Poland Seeks Our Submittal"
 poland.135.d:0 "to-do"
 poland.135.a:0 "Unfortunately, we need them."
 poland.135.b:0 "Never!"
