--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -454,3 +454,21 @@ UKR_Resettlement:0 "Resettlement"
 UKR_Resettlement_desc:0 "The Ukrainian nation is still divided, though Ukraine has been already existing almost for 20 years. We should change the situation and resettle peasants from the Western Ukraine to the East, where they will become workers in the Donbass industry, but will also bring their ideas and traditions in this unfriendly to 'OUN' region."
 UKR_Crisis_Coalition:0 "Crisis in the Coalition"
 UKR_Crisis_Coalition_desc:0 "Though the Syndicalist threat doesn't exist anymore, but 'ViN' and 'OUN' gained too much popularity among the citizens of Ukraine and almost ready to split our country into two parts. We have to do something with it, since the situation in Europe and in the World is really disturbing."
+
+UKR_Dissolve_Rada:0 "Dissolve the Rada"
+UKR_Dissolve_Rada_desc:0 "Our Supreme Rada (Parliament) has always been too left and never really supported Skorapadsky's policy. But now the King has given Skorapadsky authority to dissolve the Rada and form instead a State Senate, where should be represented only the loyal to the regime peasants and the officials from different Ukrainian regions."
+UKR_Skoropadsky_Policy:0 "Ukrainian Unity"
+UKR_Skoropadsky_Policy_desc:0 "The relations between the Russians and the Ukrainians in Ukraine are good enough, but various  powers try to depict them as an eternal struggle between the West and the East. We must stop this chauvinistic propaganda, but our aim is also to show that despite the common past and good relations with Russia, we are independent now and will always be."
+UKR_Army_Reforms:0 "Professional Army"
+UKR_Army_Reforms_desc:0 "It is obvious, that the Ukrainian army cannot be be compared with the Russian or German army in any condition, but it is still stronger than any army of the neighboring states. That's why Skoropadsky proposed a creation of the small professional army, which will help us maintain our security, but will also allow us to reduce the defence budget."
+UKR_Peasant_State:0 "Peasant State"
+UKR_Peasant_State_desc:0 "Our peasants has always been playing a significant role in the country and its economy. Now, when we get enough money after the reduction of the defence budget, we can reduce the taxes until our agriculture recovers from the Berlin Stock crisis and we will become a breadbasket of Europe once again."
+UKR_Prohibit_Syndicalism:0 "Prohibit the Syndicalism"
+UKR_Prohibit_Syndicalism_desc:0 "We have reached an understanding with the pro-Russian circles, pacified the various Ukrainian movements and made the peasants loyal to us. Now we have to deal with the Syndicalists. Our mass media will start a massive campaign, showing the Syndies as the main enemy of the Slavdom. This propaganda will help us to ban many notorious left parties."
+UKR_Federalisation:0 "Federalisation"
+UKR_Federalisation_desc:0 "One of the most serious Ukrainian problem was that fact, that the Syndicalists, Nationalists and the Russophiles tried to impose their ideas to the whole country. If we give our regions more autonomy and weaken the Supreme Rada, we will be able to control all parts of Ukraine without forcing of any popular, but regional idea for the whole country."
+
+UKR_New_Heir:0 "A successor for the King"
+UKR_New_Heir_desc:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. We have to choose one of them."
+UKR_Explosion_Dnieper:0 "Explosion on the Dnieper"
+UKR_Explosion_Dnieper_desc:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our mass media got a message that the yacht was mined by a syndicalist group, which had decided to keep up its struggle against our government. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
