--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -328,45 +328,66 @@ gerdom.29.c:0 "Keep the current Reichskanzler."
 gerdom.29.e:0 "Appoint Kurt von Schleicher, the kaisertreue alternative!"
 
 gerdom.30.t:0 "A new Reichskanzler?"
-gerdom.30.d:0 "Under the constitution of 1871, there is no formal government in the Kaiserreich. Instead, the Kaiser appoints a person of his liking to the post of Reichskanzler, who then fills the state secretary posts of the 'Reichsleitung' - the 'Reich administration'. \n\nEven though defended their Reichstag majority in the elections, this does not mean the Kaiser has to keep Franz von Papen. What shall we do?"
+gerdom.30.d:0 "Under the constitution of 1871, there is no formal government in the Kaiserreich. Instead, the Kaiser appoints a person of his liking to the post of Reichskanzler, who then fills the state secretary posts of the 'Reichsleitung' - the 'Reich administration'. \n\nEven though the DKP defended their Reichstag majority in the elections, this does not mean the Kaiser has to keep Franz von Papen. What shall we do?"
 gerdom.30.a:0 "Von Papen is doing a fine job."
 gerdom.30.b:0 "Appoint Heinrich Brüning - it's time for fresh wind!"
 gerdom.30.c:0 "Appoint Kurt von Schleicher, the kaisertreue alternative!"
 
 gerdom.32.t:0 "It's war!"
-gerdom.32.d:0 "There can be no distractions! We are at War with the Syndicalist forces! It’s a battle for the very soul of our great empire and we must focus on winning it!"
+gerdom.32.d:0 "There can be no distractions! We are at war with the Syndicalist forces! It's a battle for the very soul of our great empire and we must focus on winning it!"
 gerdom.32.a:0 "No elections until we stand in Paris!"
 
-### Election of 1942 ###
+### Election of 1937 ###
 
-gerdom.33.t:0 "1942 German Elections"
-gerdom.33.d:0 "Today the German people will elect their representative to the Reichstag! Tightly fought this election might decide the fate of the Kaiserreich! Who will win?"
+gerdom.27.t:0 "Elections of 1942"
+gerdom.27.d:0 "Today, the German people will elect their representative to the Reichstag! The elections have been tightly fought, and the results are awaited with much anticipation. The fate of several parties and, of course, the Kaiserreich itself could be decided today. \n\nIf the Social Democrats manage to secure enough votes, the 'realist' wing of the Social Liberal FVP - led by a woman, no less! - will form a coalition with them. Another possibility would be a coalition of nearly all liberal and burgeois parties - NLP, FVP and Bavarian splinter party BVP - against the old DKP, led by the beloved Lion of Africa, Paul von Lettow-Vorbeck. Or the DKP could once again get a comfortable majority. \n\nWho shall win?"
+gerdom.27.a:0 "SPD and 'realist' FVP!"
+gerdom.27.b:0 "The lion roars! The Neue grosse Koalition!"
+gerdom.27.c:0 "The good old DKP."
 
-gerdom.34.t:0 "SPD led coalition Victory!"
-gerdom.34.d:0 "Following a victory of the SPD and FVP coalition in the elections the Kaiser must appoint a new Reichkanzler"
-gerdom.34.a:0 "The Kaiser appoints Hans Vogel of the SPD"
-gerdom.34.c:0 "Compromise. FVP leader, Walther von Rathenau"
+gerdom.28.t:0 "A new Reichskanzler?"
+gerdom.28.d:0 "Under the constitution of 1871, there is no formal government in the Kaiserreich. Instead, the Kaiser appoints a person of his liking to the post of Reichskanzler, who then fills the state secretary posts of the 'Reichsleitung' - the 'Reich administration'. \n\nEven though the SPD won the most Reichstag posts in the elections, this does not mean the Kaiser has to even take this into consideration when choosing his chancellor. However, following the Ludendorff regime, this gesture of goodwill has become the modus operandi, and abandoning it could lead to public unrest. What will the Kaiser do?"
+gerdom.28.a:0 "Appoint Otto Wels, the first SPD Reichskanzler!"
+gerdom.28.b:0 "Keep the current Reichskanzler."
+gerdom.28.c:0 "Appoint Kurt von Schleicher, the kaisertreue alternative!"
 
-### Election of 1947 ###
+gerdom.29.t:0 "A new Reichskanzler?"
+gerdom.29.d:0 "Under the constitution of 1871, there is no formal government in the Kaiserreich. Instead, the Kaiser appoints a person of his liking to the post of Reichskanzler, who then fills the state secretary posts of the 'Reichsleitung' - the 'Reich administration'. \n\nEven though NLP, FVP and BVP won the most Reichstag posts in the elections, this does not mean the Kaiser has to even take this into consideration when choosing his chancellor. However, following the Ludendorff regime, this gesture of goodwill has become the modus operandi, and abandoning it could lead to public unrest. What will the Kaiser do?"
+gerdom.29.a:0 "Appoint Paul von Lettow-Vorbeck, the Lion of Afrika!"
+gerdom.29.b:0 "Appoint Paul von Lettow-Vorbeck - but demand concessions."
+gerdom.29.c:0 "Keep the current Reichskanzler."
+gerdom.29.e:0 "Appoint Kurt von Schleicher, the kaisertreue alternative!"
 
-gerdom.36.t:0 "1947 German Elections"
-gerdom.36.d:0 "Today the German people will elect their representative to the Reichstag! A tightly fought election this 1947 election might yet bring surprising results for the Kaiserreich. Will the coalition of centre-left parties emerge victorious or will the more hard-line parties win the election?"
-gerdom.36.a:0 "The Grand Reform Coalition, SPD, FVP, and NLP wins!"
-gerdom.36.b:0 "The Moderate Reform coalition, Zentrum, NLP, and FVP wins!"
-gerdom.36.c:0 "The Hardline Conservative Coaltion, DKP, AV, and Zentrum"
+gerdom.30.t:0 "A new Reichskanzler?"
+gerdom.30.d:0 "Under the constitution of 1871, there is no formal government in the Kaiserreich. Instead, the Kaiser appoints a person of his liking to the post of Reichskanzler, who then fills the state secretary posts of the 'Reichsleitung' - the 'Reich administration'. \n\nEven though the DKP once again won a Reichstag majority in the elections, this does not mean the Kaiser has to even take this into consideration when choosing his chancellor. What will the Kaiser do?"
+gerdom.30.a:0 "Von Papen is doing a fine job."
+gerdom.30.b:0 "Appoint Heinrich Brüning - it's time for fresh wind!"
+gerdom.30.c:0 "Appoint Kurt von Schleicher, the kaisertreue alternative!"
 
-gerdom.37.t:0 "SPD led coalition victory!"
-gerdom.37.d:0 "Following a victory of the SPD, FVP, and NLP coalition in the elections the Kaiser must appoint a new Reichkanzler"
-gerdom.37.a:0 "The Kaiser appoints Kurt Schumacher of the SPD"
-gerdom.37.b:0 "The Kaiser appoints War Hero and NLP leader Paul von Lettow-Vorbeck"
-gerdom.37.c:0 "The Kaiser appoints FVP leader, Walther von Rathenau"
+gerdom.32.t:0 "It's war!"
+gerdom.32.d:0 "There can be no distractions! We are at war with the Syndicalist forces! It's a battle for the very soul of our great empire and we must focus on winning it!"
+gerdom.32.a:0 "No elections until we stand in Paris!"
 
-gerdom.38.t:0 "DKP led coalition Victory!"
-gerdom.38.d:0 "Following a victory of the DKP, AV, and Zentrum coalition in the elections the Kaiser must appoint a new Reichkanzler"
-gerdom.38.a:0 "The Kaiser appoints Johann Schwerin von Krosigk"
-gerdom.38.b:0 "The Kaiser appoints Carl Goerdeler"
-gerdom.38.c:0 "The Kaiser appoints leader of the Zentrum- Heinrich Brüning"
-gerdom.38.e:0 "The Kaiser appoints AV leader- Gregor Strasser"
+# ### Election of 1947 ###
+
+# gerdom.36.t:0 "1947 German Elections"
+# gerdom.36.d:0 "Today the German people will elect their representative to the Reichstag! A tightly fought election this 1947 election might yet bring surprising results for the Kaiserreich. Will the coalition of centre-left parties emerge victorious or will the more hard-line parties win the election?"
+# gerdom.36.a:0 "The Grand Reform Coalition, SPD, FVP, and NLP wins!"
+# gerdom.36.b:0 "The Moderate Reform coalition, Zentrum, NLP, and FVP wins!"
+# gerdom.36.c:0 "The Hardline Conservative Coaltion, DKP, AV, and Zentrum"
+
+# gerdom.37.t:0 "SPD led coalition victory!"
+# gerdom.37.d:0 "Following a victory of the SPD, FVP, and NLP coalition in the elections the Kaiser must appoint a new Reichkanzler"
+# gerdom.37.a:0 "The Kaiser appoints Kurt Schumacher of the SPD"
+# gerdom.37.b:0 "The Kaiser appoints War Hero and NLP leader Paul von Lettow-Vorbeck"
+# gerdom.37.c:0 "The Kaiser appoints FVP leader, Walther von Rathenau"
+
+# gerdom.38.t:0 "DKP led coalition Victory!"
+# gerdom.38.d:0 "Following a victory of the DKP, AV, and Zentrum coalition in the elections the Kaiser must appoint a new Reichkanzler"
+# gerdom.38.a:0 "The Kaiser appoints Johann Schwerin von Krosigk"
+# gerdom.38.b:0 "The Kaiser appoints Carl Goerdeler"
+# gerdom.38.c:0 "The Kaiser appoints leader of the Zentrum- Heinrich Brüning"
+# gerdom.38.e:0 "The Kaiser appoints AV leader- Gregor Strasser"
 
 gerdom.40.t:0 "The first SPD Reichskanzler dies"
 gerdom.40.d:0 "Reichskanzler Otto Wels has passed away in office today. His health had not been the best for a long time, and the stress of the office did not prolong his life either, most likely. The Kaiser will need to appoint a new Reichskanzler as soon as possible. \n\nIn his long career, he also held - among many other titles - the office of chairman of the SPD. Now he is dead, and it remains to be seen who will lead the Social Democrats from now on."
@@ -385,18 +406,7 @@ gerdom.43.a:0 "A cordial relation"
 gerdom.43.b:0 "Announce our support for the pope!"
 gerdom.43.c:0 "Support the Catholic Church and invest more in the catholic dominated regions of the Kaiserreich"
 
-gerdom.44.t:0 "Kurt von Schleicher and some individuals of the German Nation"
-gerdom.44.d:0 "With Kurt von Schleicher as the new Reichskanzler, begins a new policy of repression against democratic and left-leaning organisation! Controversialy the GDVP remains untouched and some say that von Schleiter secrectly support them! Also interesting is what the Kaiser will make of this affiliation!"
-gerdom.44.a:0 "The Kaiser turns a blind eye..."
-gerdom.44.b:0 "Kurt von Schleicher publically support some ideas of the GDVP!"
-gerdom.44.c:0 "Kurt von Schleicher and the GDVP"
 
-gerdom.45.t:0 "Kurt von Schleicher and the GDVP"
-gerdom.45.d:0 "SCANDAL in the noble Deutschkonservative Partei! Kurt von Schleicher affiliate himself with the dregs of German society! Cries for resignation rang out! Pressured from all sides the Kaiser must decide!"
-gerdom.45.a:0 "It is time for a return of von Papen"
-gerdom.45.b:0 "The new Kaiser wants a man from the SPD - Hans Vogel"
-gerdom.45.c:0 "A Catholic from Westphalia! Zentrum - Heinrich Brüning"
-gerdom.45.e:0 "I trust von Schleiter! He stays!"
 
 gerdom.47.t:0 "The Death of Wilhelm II"
 gerdom.47.d:0 "Our Kaiser Wilhelm II has died of a pulmonary embolism in the charité hospital in Berlin today. It is the end of an age. Wilhelm II was the last European monarch who reigned during the 19th century, and his whole life he tried to uphold - sometimes succeding, often failing - the values he identified with that era. With his death, the 20th century will, at last, be fully upon us. \n\nAll over the Empire, flags are flying at half-mast, and public ceremonies are being organised to honor the Weltkriegskaiser, the Kaiser who won the world for Germany. One of the onlookers in Berlin is Kronprinz Friedrich Wilhelm, who will now have to uphold the honor of the Kaiserreich in the world."
@@ -418,10 +428,11 @@ gerdom.51.b:0 "Ich sehe keine Parteien mehr, sondern nur noch Deutsche!"
 
 ### General Strike ###
 
-gerdom.52.t:0 "The Free Workers Union of Germany"
-gerdom.52.d:0 "The Free Workers Union of Germany (German: Freie Arbeiter Union Deutschlands; FAUD) is an anarcho-syndicalist trade union operating in Germany since its creation on September 15, 1919. They have been free to operate until now, but we have found proof that their leaders are in contact with syndicalist organisations in other nations, such as the CNT-FAI in Spain. We also suspect they may be plotting against the Kaiser!"
+gerdom.52.t:0 "The FAUD"
+gerdom.52.d:0 "The Freie Arbeiterunion Deutschlands (Free Worker's union of Germany) is a roof organisation of several trade unions founded in 1927. They have denounced the Syndicalist underground terror repeatedly and therefore been allowed to operate until now, but the Verdeckte Reichspolizei has produced definite proof that their leaders are in contact with syndicalist organisations in other nations, such as the CNT-FAI in Spain. We also suspect they may be plotting against the Kaiser!"
 gerdom.52.a:0 "Jail the leaders and ban the party, force them to go underground!"
 gerdom.52.b:0 "Continue to allow the FAUD to operate but watch them closely."
+
 gerdom.53.t:0 "Germany bans the FAUD"
 gerdom.53.d:0 "The Free Workers' Union of Germany (German: Freie Arbeiter Union Deutschlands; FAUD) is an anarcho-syndicalist trade union operating in Germany since its creation on September 15, 1919. They had been free to operate but the German government has just decided to arrest its leaders and ban the organisation. How should we react?"
 gerdom.53.a:0 "Its too early to confront Germany."
@@ -543,7 +554,7 @@ gerdom.83.d:0 "The Mutawakkilite Kingdom of Yemen has agreed to our offer and th
 gerdom.83.a:0 "Great!"
 
 gerdom.84.t:0 "The Coronation of Wilhelm III"
-gerdom.84.d:0 "With the passing of the great Weltkriegkaiser Wilhelm the Second, Wilhelm the Third has given speech on his coronation day to guide all of Germany towards prosperity and to safeguard our interests throughout the globe!"
+gerdom.84.d:0 "With the passing of the great Weltkriegskaiser Wilhelm the Second, Wilhelm the Third has given speech on his coronation day to guide all of Germany towards prosperity and to safeguard our interests throughout the globe!"
 gerdom.84.a:0 "Heil dir im Siegerkranz!"
 
 gerdom.85.t:0 "German Empire Bans French Organisations!"
@@ -926,9 +937,9 @@ gerfor.64.t:0 "Norway agrees to lease Trondheim"
 gerfor.64.d:0 "The Norwegian government has decided to agree to our offer of leasing Trondheim for the next 25 years! A small commission is already on its way to assess the investments necessary to make Trondheim an integral part in our defense against Syndicalism."
 gerfor.64.a:0 "Very good."
 
-gerfor.64.t:0 "Norway does not agree to lease Trondheim"
-gerfor.64.d:0 "The Norwegian government has decided to not agree to our offer of leasing Trondheim for the next 25 years, citing the threat of British retaliation. While understandable and not unexpected, this is still unfortunate."
-gerfor.64.a:0 "Kiel will have to be good enough."
+gerfor.65.t:0 "Norway does not agree to lease Trondheim"
+gerfor.65.d:0 "The Norwegian government has decided to not agree to our offer of leasing Trondheim for the next 25 years, citing the threat of British retaliation. While understandable and not unexpected, this is still unfortunate."
+gerfor.65.a:0 "Kiel will have to be good enough."
 
 ### Flavour Events ###
 
