Fixes thanks to http://steamcommunity.com/sharedfiles/filedetails/?id=860317290

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -547,7 +547,7 @@
  VICTORY_POINTS_10696:0 "Omsk"
  VICTORY_POINTS_10717:0 "Kansas City"
  VICTORY_POINTS_10737:0 "Kabul"
- VICTORY_POINTS_10747:0 "Bogota"
+ VICTORY_POINTS_10747:0 "Bogotá"
  VICTORY_POINTS_10760:0 "Muscat"
  VICTORY_POINTS_10803:0 "Abidjan"
  VICTORY_POINTS_10836:0 "Ouagadougou"
