--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -7,7 +7,7 @@
  STATE_5:0 "Ostpreussen"
  STATE_6:0 "Vlaanderen"
  STATE_7:0 "Holland"
- STATE_8:0 "Luxemburg"
+ STATE_8:0 "Luxembourg"
  STATE_9:0 "Čechy"
  STATE_10:0 "Warszawa"
  STATE_11:0 "Vilnius"
@@ -690,11 +690,11 @@
  STATE_688:0 "Chaco Boreal"
  STATE_689:0 "Jamaica"
  STATE_690:0 "Northern Bahamas"
- STATE_691:0 "Trinidad"
+ STATE_691:0 "Trinidad and Tobago"
  STATE_692:0 "Windward Islands"
  STATE_693:0 "Southern Bahamas"
  STATE_694:0 "French Caribbean"
- STATE_695:0 "Curacao"
+ STATE_695:0 "Curaçao"
  STATE_696:0 "Bermuda"
  STATE_697:0 "Madeira"
  STATE_698:0 "Azores"
@@ -707,7 +707,7 @@
  STATE_705:0 "São Tomé"
  STATE_706:0 "Réunion"
  STATE_707:0 "Mauritius"
- STATE_708:0 "Comoro Islands"
+ STATE_708:0 "Comoros Islands"
  STATE_709:0 "Seychelles"
  STATE_710:0 "Diego Garcia"
  STATE_711:0 "Christmas Island"
@@ -727,13 +727,13 @@
  STATE_725:0 "Nauru"
  STATE_726:0 "Samoa"
  STATE_727:0 "Line Islands"
- STATE_728:0 "Guangzhouwan"
+ STATE_728:0 "Kouang-Tchéou-Wan"
  STATE_729:0 "Macau"
  STATE_730:0 "St. Pierre and Miquelon"
  STATE_731:0 "Solun"
  STATE_732:0 "Pamir"
  STATE_733:0 "Andaman"
- STATE_734:0 "Nendo"
+ STATE_734:0 "Nendö"
  STATE_735:0 "Savoy"
  STATE_736:0 "Küstenland"
  STATE_737:0 "Bismarck"
