More work on the CSA and USA

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -55,6 +55,13 @@ CSA_liberty_ship:0 "Liberty Ships"
 CSA_syndicalism_arsenal:0 "Arsenal of Syndicalism"
 CSA_longist_remnants:0 "Longist Remnants"
 CSA_mexican_american_treaty:0 "Mexican-American Friendship Treaty"
+CSA_worker_confedration:0 "Worker's Confederation"
+CSA_worker_confedration_desc:0 ""
+CSA_worker_republic:0 "Worker's Republic"
+CSA_worker_republic_desc:0 ""
+CSA_centralized_union:0 "United Socialistic States of America"
+CSA_centralized_union_desc:0 ""
+
 
 ### Parties ###
 CSA_totalist_party:0 "CSA"
@@ -288,7 +295,7 @@ CSA_ussa:0 "U.S.S.A"
 CSA_ussa_desc:0 "America has been transformed from a capitalistic dictatorship of the bourgeois into the United Socialistic States of America, the U.S.S.A. Though it will take time for the revolution to fully impact all of society, we have set the new republic down a better and brighter future."
 CSA_red_constitution:0 "Red Constitution"
 CSA_red_constitution_desc:0 "Now that the form of government has been properly hammered out, it is time to write out the second American Constitution. This one will truly be for the people, by the people, and of the people. Long live the Revolution!"
-
+CSA_red_constitution_tooltip:0 "You will get a National Idea depending on which path you go down"
 ### Reconstruction Foci ###
 CSA_reconstruction:0 "Reconstructing America"
 CSA_reconstruction_desc:0 "Now that the Second constitution convention has come to a close and we have written up the new constitution, it is time to focus on reconstruction efforts and rebuilding from the civil war. The revolutionary war was a bloody conflict, now it is time to rebuild. "
