--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -187,7 +187,7 @@
  VICTORY_POINTS_3780:0 "Milano"
  VICTORY_POINTS_3816:0 "Zaragoza"
  VICTORY_POINTS_3838:0 "Ajáccio"
- VICTORY_POINTS_3878:0 "New York"
+ VICTORY_POINTS_3878:0 "New York City"
  VICTORY_POINTS_3882:0 "Skopje"
  VICTORY_POINTS_3893:0 "Edirne"
  VICTORY_POINTS_3924:0 "Split"
@@ -316,7 +316,7 @@
  VICTORY_POINTS_6558:0 "Posen"
  VICTORY_POINTS_6560:0 "Gent"
  VICTORY_POINTS_6573:0 "Kosice"
- VICTORY_POINTS_6583:0 "Luxemburg"
+ VICTORY_POINTS_6583:0 "Luxembourg City"
  VICTORY_POINTS_6598:0 "Antwerpen"
  VICTORY_POINTS_6606:0 "Bologna"
  VICTORY_POINTS_6613:0 "Lyon"
