--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -444,7 +444,7 @@ UKR_ViN_Russophiles:0 "Church and Nation"
 UKR_ViN_Russophiles_desc:0 "It seems, that Mikhail Bulgakov with the help of 'ViN' has finally found a proper decision, which allow him to solve the land question. The Ukrainian Church, which is a part of the Russian Orthodox Church will sell the unused lands to the peasants, but the Orthodoxy will be recognised as the state religion in Ukraine."
 UKR_OUN_Nationalists:0 "Confiscate the Land"
 UKR_OUN_Nationalists_desc:0 "Lots of Polish landlords control many lands in the Western and Central Ukraine. Since Poland is weak now, we can easily confiscate their estates, expel these Poles and redistribute their lands among the Ukrainian peasants."
-UKR_Abolish_Law:0 "Recognising Russian as the Official Second Language"
+UKR_Abolish_Law:0 "Recognising Russian as the Second Language"
 UKR_Abolish_Law_desc:0 "One of the biggest problems, which exists in Ukraine is the language question. De-facto the Russian language is used by majority of the population, but its usage is prohibited in the state institutions. 'ViN' has always opposed this prohibition and thus it is with great pleasure that Mikhail Bulgakov now is able to abolish this language law."
 UKR_Prosvita_Mov:0 "The Prosvita Movement"
 UKR_Prosvita_Mov_desc:0 "Unfortunately the majority of our people use the Russian language despite the fact that the government doesn't recognise it as a state language. To combat this, 'OUN' proposed to invest in the activities of the 'Prosvita' ('Education') movement. The aim of 'Prosvita' is to spread Ukrainian language all over our country as well as abroad."
