--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -296,8 +296,14 @@ sto_gdansk:0 "Stocznia Gdanskа"
 POL_NATIONALISTS_GOV:0 "Nationalist government in Poland"
 POL_WE_AUS:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_WE_GER:0 "Elected J.K.W. Fryderyk Krystian Saski"
-POL_CZA_AUS:0 "Elected J.K.W. Eustachy I Sapieha"
-POL_CZA_GER:0 "Elected J.K.W. Eustachy I Sapieha"
+POL_CZA_AUS:0 "Elected J.K.W. Augustyn I Czartoryski"
+POL_CZA_GER:0 "Elected J.K.W. Augustyn I Czartoryski"
+POL_MEN_AUS:0 "Elected J.K.W. Mendog III"
+POL_MEN_GER:0 "Elected J.K.W. Mendog III"
+POL_MEN_LIT:0 "Elected J.K.W. Mendog III"
+POL_HA_AUS:0 "Elected J.K.W. Karl Olbracht Habsburg"
+POL_HA_GER:0 "Elected J.K.W. Karl Olbracht Habsburg"
+POL_ATTEND_INTERNATIONALE:0 "Interested in the Internationale"
 POL_SHUNNED_US:0 "The poles have shunned us"
 POL_DEFIED_US:0 "The poles defied us"
 POL_SHUNNED_US_BIG:0 "The poles have shunned us"
@@ -987,7 +993,7 @@ POL_REPUBLIC:0 "Declared the Polish Republic"
 POL_SYNDIE:0 "Syndicalists Control Poland"
 POL_NATIONALISTS:0 "Nationalists Control Poland"
 POL_SIKORSKI:0 "Sikorski Controls Poland"
-POL_WE:0 "Freidrich Christian Wettin is King"
+POL_WE:0 "Fryderyk Krystian Saski is King"
 POL_HA:0 "Karl Olbracht Habsburg is King"
 POL_MEN:0 "Mendog III is King"
 POL_CZA:0 "Augustyn I Czartoryski is King"
